<?xml version="1.0"?>
<package format="2">
  <name>launchfile_switcher</name>
  <version>0.1.0</version>
  <description>The launchfile_switcher package</description>
  <maintainer email="nagao@rb-sapiens.com">Shun Nagao</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>
  <depend>rosnode</depend>
</package>
